# TCA

./: .gitignore  README.md  sort.jl
Lista 01/: .directory  Gráficos.ods  Lista 01.odt  README.md  TESTES.sh  numbers.txt  shell.txt  sort.cpp
Lista 02/: lista_02.cpp  lista_02.doc  lista_2.cpp
Lista 03/: Lista 03.ipynb  Lista_03.md  README.md  jarvis_FC2D.py  winged_edge.py
Trabalho final/: .directory  README.md  delaunay.py  jarvis_fc2d.py  pyproject.toml  sweeping.py  winged_edge.py
Trabalho final/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
Trabalho final/delaunay/: delaunay.py
Trabalho final/winged_edge/: Testando a winged_edge.ipynb  winged_edge.py
