[tool.poetry]
name = "trimesh"
version = "0.1.0"
description = "Triagulação pelos algoritmos de Delaunay e varredura"
authors = ["Weverton Marques <wevertonms@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
rope = "^0.12.0"
pylint = "^2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
